[project]
name = "incident-env"
version = "0.1.0"
description = "AI Incident Response OpenEnv"
authors = [
  {name = "Manoj"}
]
dependencies = [
  "fastapi",
  "uvicorn",
  "openenv-core>=0.2.0"
]

[project.scripts]
start = "server.app:app"

[tool.setuptools]
packages = ["env", "api", "grader", "server"]
